[package]
edition = "2018"
name = "typed_path"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
publish = false
description = "Well-typed paths."
documentation = "https://docs.rs/typed_path"
readme = "README.md"
keywords = ["path"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qryxip/typed_path"
